[gd_scene load_steps=10 format=3 uid="uid://myfuyvad2c5b"]

[ext_resource type="Texture2D" uid="uid://b57a6lfdx8jto" path="res://art/button.png" id="1_rhj8v"]
[ext_resource type="Script" uid="uid://dcs6mqg323ci0" path="res://scripts/button.gd" id="2_3q610"]
[ext_resource type="AudioStream" uid="uid://0m1byjnmu526" path="res://sound/270304__littlerobotsoundfactory__collect_point_00.wav" id="3_3q610"]
[ext_resource type="FontFile" uid="uid://d1dqeqtblupfy" path="res://fonts/ice-pixel7/ice_pixel-7.ttf" id="4_i7y4x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3q610"]
atlas = ExtResource("1_rhj8v")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7y4x"]
atlas = ExtResource("1_rhj8v")
region = Rect2(0, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_8m7bo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q610")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7y4x")
}],
"loop": false,
"name": &"pressed",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rhj8v"]
radius = 54.0093

[sub_resource type="LabelSettings" id="LabelSettings_1bdt2"]
font = ExtResource("4_i7y4x")
font_size = 40

[node name="button" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_8m7bo")
animation = &"pressed"
script = ExtResource("2_3q610")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_rhj8v")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3q610")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 558.0
offset_top = 233.0
offset_right = 650.0
offset_bottom = 273.0
label_settings = SubResource("LabelSettings_1bdt2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="save" type="Button" parent="."]
offset_left = -114.0
offset_top = -254.0
offset_right = -12.0
offset_bottom = -223.0
text = "Save Data"

[node name="load" type="Button" parent="."]
offset_left = 14.0
offset_top = -254.0
offset_right = 118.0
offset_bottom = -223.0
text = "Load Data"

[node name="Buy_1" type="Button" parent="."]
offset_left = 187.0
offset_top = -126.0
offset_right = 344.0
offset_bottom = -95.0
text = "Buy Stronger Clicks"

[node name="clear" type="Button" parent="."]
offset_left = -44.0
offset_top = -295.0
offset_right = 45.0
offset_bottom = -264.0
text = "Clear Data"

[node name="status" type="Label" parent="."]
offset_left = -342.0
offset_top = -253.0
offset_right = -302.0
offset_bottom = -230.0

[node name="Buy_2" type="Button" parent="."]
offset_left = 219.0
offset_top = -78.0
offset_right = 327.0
offset_bottom = -47.0
text = "Buy a Clicker"

[node name="clicker_timer" type="Timer" parent="."]
autostart = true

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Buy_1" to="." method="_on_buy_1_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Buy_2" to="." method="_on_buy_2_pressed"]
[connection signal="timeout" from="clicker_timer" to="." method="_on_clicker_timer_timeout"]
